<resources>
    <string name="app_name">OTP</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="we_will_send_you_an_otp_on_this_mobile_number">We will send you an OTP on this mobile Number</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="_254">+254-</string>
    <string name="_7">7*******</string>
    <string name="get_otp">Get OTP</string>
    <string name="enter_the_otp_sent_to">Enter the OTP sent to</string>
    <string name="didn_t_receive_the_otp">Didn\'t receive the OTP</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="verify_otp">Verify OTP</string>
</resources>